# gestao-de-clientes

./: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
clientes/: models.py  urls.py  views.py
clientes/migrations/: 0001_initial.py  0002_auto_20180714_1908.py
clientes/templates/: index.html  person.html  person_delete_confirm.html  person_form.html
clientes/templates/clientes/: person_confirm_delete.html  person_detail.html  person_form.html  person_list.html  person_update_form.html
gestao_clientes/: settings.py  urls.py
home/: urls.py  views.py
home/templates/: home.html
templates/: base.html
templates/registration/: login.html
