[tool.poetry]
name = "julinux-gestao-clientes"
version = "0.1.0"
description = ""
authors = ["Julio Saraiva <contato@juliosaraiva.com.br>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.9"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
pylint = "^2.5.3"
autopep8 = "^1.5.4"
dj-static = "^0.0.6"
Pillow = "^7.2.0"
dj-database-url = "^0.5.0"
django-bootstrap-form = "^3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
